--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-eechy.js",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Run all routes of your express api with just one function.",
   "main": "index.js",
   "scripts": {
@@ -33,6 +33,7 @@
     "@types/node": "^17.0.35"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1"
   },
   "types": "./index.d.ts"
